--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	</head>
 	<body>
 		<h1>Hello World</h1>
+		<h2>just testing my Github connection</h2>
 		<h2 id="confirm">Confirm Purchase</h2>
 		<button id="button">Yes</button>
 		<p id="demo">JavaScript can change HTML content.</p>
